0.1639
  added experimental not_exists()
0.1638
  table object call dbi object method if not found method.
  added experimental base_table attribute and removed experimental table_class attribute
  renamed helper to method.
  added experimental DBIx::Custom::Result::stash()
  renamed experimental DBIx::Custom::Table helper to method
0.1637
  renamed dbi_options to dbi_option. dbi_options is available, but deprecated.
  renamed DBIx::Custom::TagProcessor to DBIx::Custom::Tag, and function names is cleanuped.
  renamed register_tag_processor to register_tag. register_tag_processor is available, but deprecated.
  renamed tag_processors to tags. tag_prosessors is available, but deprecated.
  improved error message
  build all clause if param is undefined.
  each_column callback receive self as first argument.
  removed experimental txn_scope
0.1636
  added tests and cleanup
0.1635
  renamed iterate_all_columns to each_column
0.1634
  became more useful where method
  changed DBIx::Custom::Where greatly
0.1633
  fixed test
0.1632
  added experimental where method
  added experimental DBIx::Custom::Where.
  removed DBIx::Custom::Or
0.1631
  added experimental DBIx::Custom::Result end_filter method
  experimental extended select method's where option
  fix select method empty where failed bug
  added experimental suger method query option
  added experimental or method
0.1630
  fix test bug
0.1629
  renamed auto_filter to apply_filter
  changed apply_filter method arguments
  deprecated cache_method
0.1628
  remove DBIx::Custom::Model
  move table method and table_class attribute to DBIx::Custom
  added examples
  fixed connect method bug
0.1627
  added insert, update, update_all, delete, delete_all, select method to DBIx::Custom::Table
  added experimental txn_scope
0.1626
  simplified DBIx::Custom::Model and DBIx::Custom::Table
0.1625
  added experimental DBIx::Custom::Model and DBIx::Custom::Table
0.1624
  added experimental iterate_all_columns method.
0.1623